--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Laporin AI | Vercel Pro</title>
+    <title>Pajak Pro | Advanced AI</title>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#0071e3">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,61 +12,81 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root { --ios-blue: #0071e3; --ios-bg: #f5f5f7; }
-        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         body { font-family: -apple-system, system-ui, sans-serif; background: var(--ios-bg); margin: 0; padding: 20px; display: flex; justify-content: center; }
-        .app-container { width: 100%; max-width: 450px; }
+        .app-container { width: 100%; max-width: 450px; padding-bottom: 40px; }
         .screen { display: none; animation: fadeIn 0.4s ease; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; } }
-        .card { background: white; padding: 25px; border-radius: 22px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); margin-bottom: 20px; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .card { background: white; padding: 25px; border-radius: 22px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); margin-bottom: 20px; border: 1px solid rgba(0,0,0,0.03); }
         h1 { font-size: 34px; font-weight: 800; letter-spacing: -1.5px; margin: 0; }
         label { display: block; font-size: 11px; font-weight: 700; color: #8e8e93; margin: 0 0 8px 10px; text-transform: uppercase; }
-        input { width: 100%; padding: 16px; margin-bottom: 12px; border-radius: 14px; border: 1px solid #d1d1d6; font-size: 17px; outline: none; background: #fafafa; }
+        input { width: 100%; padding: 16px; margin-bottom: 12px; border-radius: 14px; border: 1px solid #d1d1d6; font-size: 17px; background: #fafafa; transition: 0.2s; }
+        input:focus { border-color: var(--ios-blue); background: #fff; }
         button { width: 100%; padding: 18px; border-radius: 16px; border: none; background: #000; color: #fff; font-weight: 700; font-size: 17px; cursor: pointer; transition: 0.2s; }
         button:active { transform: scale(0.97); }
         .btn-logout { background: #ff3b30; width: auto; padding: 8px 15px; font-size: 12px; border-radius: 10px; }
-        .btn-settings { background: #e5e5ea; color: #000; width: auto; padding: 8px 12px; font-size: 18px; border-radius: 10px; margin-right: 10px; }
-        .history-item { background: white; padding: 20px; border-radius: 20px; margin-bottom: 15px; border: 1px solid #e5e5ea; }
-        #modalSettings { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); backdrop-filter:blur(5px); z-index:999; }
-        .analysis { font-size: 14px; color: #3a3a3c; line-height: 1.6; background: #f2f2f7; padding: 15px; border-radius: 14px; margin-top: 10px; }
+        .btn-settings { background: #e5e5ea; color: #000; width: auto; padding: 8px 12px; font-size: 18px; border-radius: 10px; margin-right: 8px; }
+        
+        /* Accordion & Search Styles */
+        .search-container { margin-bottom: 15px; position: sticky; top: 10px; z-index: 10; }
+        .history-header { display: flex; justify-content: space-between; align-items: center; cursor: pointer; }
+        .history-content { display: none; padding-top: 15px; border-top: 1px solid #f2f2f7; margin-top: 15px; animation: fadeIn 0.3s ease; }
+        .history-item.active .history-content { display: block; }
+        .history-item.active .arrow { transform: rotate(180deg); }
+        .arrow { transition: 0.3s; font-size: 12px; color: #8e8e93; }
+        .analysis { font-size: 14px; color: #3a3a3c; line-height: 1.6; background: #f2f2f7; padding: 15px; border-radius: 14px; }
+        .btn-delete { background: none; color: #ff3b30; width: auto; padding: 8px; font-size: 13px; font-weight: 500; }
+        
+        #modalSettings { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); backdrop-filter:blur(8px); z-index:999; }
+        #loading { display: none; text-align: center; color: var(--ios-blue); font-weight: 600; margin-bottom: 10px; }
     </style>
 </head>
 <body>
 
 <div id="modalSettings">
-    <div style="max-width:350px; margin:100px auto; background:white; padding:30px; border-radius:25px;">
-        <h3>⚙️ Groq API Key</h3>
+    <div style="max-width:350px; margin:100px auto; background:white; padding:30px; border-radius:25px; text-align:center;">
+        <h3 style="margin-top:0;">⚙️ Config API Groq</h3>
         <input type="password" id="u_key" placeholder="gsk_xxxx...">
-        <button onclick="saveKey()">Simpan Key</button>
-        <button onclick="toggleSettings()" style="background:none; color:red; margin-top:10px; font-size:14px;">Tutup</button>
+        <button onclick="saveKey()">Simpan Konfigurasi</button>
+        <button onclick="toggleSettings()" style="background:none; color:#8e8e93; margin-top:10px; font-size:14px;">Tutup</button>
     </div>
 </div>
 
 <div class="app-container">
     <div id="authScreen" class="screen">
-        <h1>Laporin.</h1>
-        <div class="card">
-            <input type="email" id="email" placeholder="Email">
-            <input type="password" id="pw" placeholder="Password">
-            <button onclick="handleAuth()">Sign In / Register</button>
+        <h1>Pajak Pro.</h1>
+        <div class="card" style="margin-top:20px;">
+            <label>Email Address</label>
+            <input type="email" id="email" placeholder="nama@email.com">
+            <label>Password</label>
+            <input type="password" id="pw" placeholder="••••••••">
+            <button onclick="handleAuth()">Masuk / Daftar</button>
         </div>
     </div>
 
     <div id="mainScreen" class="screen">
         <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
-            <h1>Laporin.</h1>
+            <h1>Pajak Pro.</h1>
             <div>
                 <button class="btn-settings" onclick="toggleSettings()">⚙️</button>
                 <button class="btn-logout" onclick="logout()">Logout</button>
             </div>
         </div>
+
         <div class="card"><canvas id="taxChart" height="180"></canvas></div>
+
         <div class="card">
-            <label>Brand Reference</label>
-            <input type="text" id="brand" placeholder="e.g. Honda">
-            <label>Income (Rp)</label>
-            <input type="number" id="nominal" placeholder="0">
+            <label>Input Transaksi Baru</label>
+            <input type="text" id="brand" placeholder="Nama Proyek (ex: Honda Jazz)">
+            <input type="number" id="nominal" placeholder="Nominal Income (Rp)">
+            <div id="loading">✨ AI sedang berhitung...</div>
             <button id="btnSubmit" onclick="prosesData()">Analyze & Save</button>
         </div>
+
+        <div class="search-container">
+            <input type="text" id="searchInput" placeholder="🔍 Cari riwayat proyek..." onkeyup="filterHistory()">
+        </div>
+
         <div id="historyList"></div>
     </div>
 </div>
@@ -74,7 +94,7 @@
 <script>
     const sdk = new Appwrite.Client().setEndpoint('https://sgp.cloud.appwrite.io/v1').setProject('pajakpro');
     const account = new Appwrite.Account(sdk), db = new Appwrite.Databases(sdk);
-    let myChart = null;
+    let myChart = null, allDocs = [];
 
     async function init() {
         try { await account.get(); showScreen('mainScreen'); loadData(); } 
@@ -91,21 +111,22 @@
         try { await account.createEmailSession(e, p); location.reload(); }
         catch (err) {
             try { await account.create('unique()', e, p); await account.createEmailSession(e, p); location.reload(); }
-            catch (x) { alert("Error: " + x.message); }
+            catch (x) { alert("Gagal: " + x.message); }
         }
     }
 
     async function logout() { await account.deleteSession('current'); location.reload(); }
     function toggleSettings() { const m = document.getElementById('modalSettings'); m.style.display = m.style.display === 'block' ? 'none' : 'block'; }
-    function saveKey() { const val = document.getElementById('u_key').value; if(val.startsWith('gsk_')) { localStorage.setItem('u_gkey', val); toggleSettings(); alert('Key Tersimpan!'); } else { alert('Key Groq Salah!'); } }
+    function saveKey() { const val = document.getElementById('u_key').value; if(val.startsWith('gsk_')) { localStorage.setItem('u_gkey', val); toggleSettings(); alert('API Key Aman!'); } else { alert('Key Tidak Valid!'); } }
 
     async function loadData() {
         try {
             const user = await account.get();
             const res = await db.listDocuments('databaseutama', 'transaksi_klien', [Appwrite.Query.equal('user_id', user.$id)]);
-            renderHistory(res.documents);
+            allDocs = res.documents.reverse();
+            renderHistory(allDocs);
             updateChart(res.documents);
-        } catch (e) { console.log(e); }
+        } catch (e) { console.error(e); }
     }
 
     function updateChart(docs) {
@@ -116,52 +137,87 @@
             data: {
                 labels: docs.slice(-5).map(d => d.nama_brand),
                 datasets: [{ label: 'Income', data: docs.slice(-5).map(d => d.nominal), backgroundColor: '#0071e3', borderRadius: 8 }]
-            }
+            },
+            options: { plugins: { legend: { display: false } } }
         });
     }
 
     function renderHistory(docs) {
         const h = document.getElementById('historyList');
-        h.innerHTML = '<h2>History</h2>';
-        docs.reverse().forEach(d => {
-            h.innerHTML += `<div class="history-item">
-                <strong>${d.nama_brand}</strong> - Rp ${d.nominal.toLocaleString()}
-                <div class="analysis">${d.analisis_pajak}</div>
-                <button onclick="downloadPDF('${d.nama_brand}', ${d.nominal}, \`${d.analisis_pajak.replace(/`/g, "'")}\`)" style="width:auto; padding:5px; font-size:10px; margin-top:5px; background:#eee; color:#000;">📄 PDF</button>
-            </div>`;
+        h.innerHTML = '';
+        docs.forEach(d => {
+            const div = document.createElement('div');
+            div.className = 'history-item card';
+            div.innerHTML = `
+                <div class="history-header" onclick="this.parentElement.classList.toggle('active')">
+                    <div>
+                        <strong style="font-size:17px;">${d.nama_brand}</strong><br>
+                        <span style="color:#0071e3; font-weight:600;">Rp ${d.nominal.toLocaleString()}</span>
+                    </div>
+                    <span class="arrow">▼</span>
+                </div>
+                <div class="history-content">
+                    <div class="analysis">${d.analisis_pajak.replace(/\n/g, '<br>')}</div>
+                    <div style="display:flex; gap:10px; margin-top:15px;">
+                        <button onclick="downloadPDF('${d.nama_brand}', ${d.nominal}, \`${d.analisis_pajak.replace(/`/g, "'")}\`)" style="flex:1; background:#e5e5ea; color:#000; padding:10px; font-size:13px;">📄 PDF</button>
+                        <button class="btn-delete" onclick="hapusData('${d.$id}')">🗑️ Hapus</button>
+                    </div>
+                </div>
+            `;
+            h.appendChild(div);
         });
     }
 
+    function filterHistory() {
+        const q = document.getElementById('searchInput').value.toLowerCase();
+        const filtered = allDocs.filter(d => d.nama_brand.toLowerCase().includes(q));
+        renderHistory(filtered);
+    }
+
+    async function hapusData(id) {
+        if(!confirm('Hapus data ini selamanya?')) return;
+        try {
+            await db.deleteDocument('databaseutama', 'transaksi_klien', id);
+            loadData();
+        } catch (e) { alert(e.message); }
+    }
+
     async function prosesData() {
-        const gkey = localStorage.getItem('u_gkey');
-        if(!gkey) { alert('Isi API Key dulu di setting!'); return toggleSettings(); }
+        const key = localStorage.getItem('u_gkey');
+        if(!key) { alert('Input API Key dulu!'); return toggleSettings(); }
         const b = document.getElementById('brand').value, n = document.getElementById('nominal').value;
         if(!b || !n) return;
+        document.getElementById('loading').style.display = 'block';
         try {
             const user = await account.get();
             const ai = await fetch('https://api.groq.com/openai/v1/chat/completions', {
                 method: 'POST',
-                headers: { 'Authorization': `Bearer ${gkey}`, 'Content-Type': 'application/json' },
+                headers: { 'Authorization': `Bearer ${key}`, 'Content-Type': 'application/json' },
                 body: JSON.stringify({
                     model: "llama-3.3-70b-versatile",
-                    messages: [{role: "system", content: "Expert pajak Indonesia. Ringkas."}, {role: "user", content: `Pajak ${b} Rp${n}`}]
+                    messages: [{role: "system", content: "Expert pajak Indonesia. Ringkas dan akurat."}, {role: "user", content: `Pajak ${b} Rp${n}`}]
                 })
             });
-            const data = await ai.json();
-            const hasil = data.choices[0].message.content;
+            const res = await ai.json();
+            const hasil = res.choices[0].message.content;
             await db.createDocument('databaseutama', 'transaksi_klien', 'unique()', {
                 nama_brand: b, nominal: parseInt(n), analisis_pajak: hasil, user_id: user.$id
             });
+            document.getElementById('brand').value = ''; document.getElementById('nominal').value = '';
             loadData();
-        } catch (e) { alert('Gagal! Cek Key lo.'); }
+        } catch (e) { alert('API Error!'); }
+        finally { document.getElementById('loading').style.display = 'none'; }
     }
 
     function downloadPDF(b, n, t) {
         const { jsPDF } = window.jspdf;
         const doc = new jsPDF();
-        doc.text(`Laporan: ${b}\nNominal: Rp ${n.toLocaleString()}\n\nAnalisis:\n${t}`, 10, 20);
+        doc.setFontSize(18); doc.text(`PAJAK PRO: ${b.toUpperCase()}`, 10, 20);
+        doc.setFontSize(12); doc.text(`Income: Rp ${n.toLocaleString()}`, 10, 30);
+        doc.text(doc.splitTextToSize(t, 180), 10, 50);
         doc.save(`${b}.pdf`);
     }
+
     init();
     if ('serviceWorker' in navigator) { navigator.serviceWorker.register('sw.js'); }
 </script>
